# StereoVision-SLAM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh
app/: CMakeLists.txt  run_dense_reconstruction.cpp  run_kitti_stereo_vision_SLAM.cpp  run_stereo_vision_SLAM.cpp
config/: config-00.yaml  config-02.yaml  config-03.yaml  config-04.yaml  config-05.yaml  config-06.yaml  config-07.yaml  config-08.yaml  config-09.yaml  default.yaml
config/dense_3D_reconstruction_configs/: config-00.yaml  config-02.yaml  config-04.yaml  config-05.yaml  config-06.yaml  config-07.yaml  config-09.yaml
config/stereo_slam_configs/: config-00.yaml  config-02.yaml  config-03.yaml  config-04.yaml  config-05.yaml  config-06.yaml  config-07.yaml  config-08.yaml  config-09.yaml
dnn_weights/licence/: Mobilenet Weights.txt
include/StereoVisionSLAM/: algorithm.h  backend.h  camera.h  collection_adapters.h  common_include.h  config.h  dataset.h  dense_reconstruction.h  feature.h  frame.h  frontend.h  g2o_types.h  loopclosure.h  map.h  mappoint.h  slamexception.h  viewer.h  visual_odometry.h
rerun-io-rbl/: rerun_stereo_vision_slam.rbl
src/: CMakeLists.txt  backend.cpp  camera.cpp  config.cpp  dataset.cpp  dense_reconstruction.cpp  feature.cpp  frame.cpp  frontend.cpp  loopclosure.cpp  map.cpp  mappoint.cpp  viewer.cpp  visual_odometry.cpp
test/: CMakeLists.txt  test_algorithm.cpp  test_camera.cpp  test_config.cpp  test_dataset.cpp  test_feature.cpp  test_frame.cpp  test_map.cpp  test_mappoint.cpp
