add_executable(run_stereo_visual_SLAM run_stereo_vision_SLAM.cpp)
target_link_libraries(run_stereo_visual_SLAM StereoVisionSLAM ${THIRD_PARTY_LIBS})

add_executable(run_dense_reconstruction run_dense_reconstruction.cpp)
target_link_libraries(run_dense_reconstruction StereoVisionSLAM ${THIRD_PARTY_LIBS})